feat: Add nav links

--- a/movie.html
+++ b/movie.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
+        <header class="container flex justify-space-between">
+            <a href="/index.html">Home</a>
+            <a href="/favorites.html">Favorites</a>
+        </header>
         <div class="container" id="movie-details"></div>
         <script type="module" src="js/movie.js"></script>
     </body>
