--- a/favorites.html
+++ b/favorites.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
+
+        <header class="container flex justify-space-between">
+            <a href="/index.html">Home</a>
+        </header>
+
         <div class="container">
             <h1>My Favorite Movies</h1>
             <div id="favorites-list"></div>
