--- a/favorites.html
+++ b/favorites.html
@@ -7,9 +7,8 @@
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
-
         <header class="container flex justify-space-between">
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
         </header>
 
         <div class="container">
