--- a/movie.html
+++ b/movie.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <header class="container flex justify-space-between">
-            <a href="/index.html">Home</a>
-            <a href="/favorites.html">Favorites</a>
+            <a href="index.html">Home</a>
+            <a href="favorites.html">Favorites</a>
         </header>
         <div class="container" id="movie-details"></div>
         <script type="module" src="js/movie.js"></script>
